# gotop

./: .gitignore  Cargo.toml  README.md
src/: args.rs  main.rs
src/termui/: entry.go
src/utils/: runes.go  runes_test.go  xdg.rs
src/widgets/: cpu.rs  mod.rs  proc.go
