[package]
name = "gotop"
version = "4.0.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
edition = "2018"

[dependencies]
tui = "0.5.0"
structopt = "0.2.15"
strum_macros = "0.15.0"
strum = "0.15.0"
lazy_static = "1.3.0"
dirs = "1.0.5"
termion = "1.5.1"
crossbeam-channel = "0.3.8"
psutil = { path = "../../other-projects/rust-psutil" }
